--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,13 @@
         <!--A standalone build of `socket.io-client` is exposed automatically by the
         socket.io server as `/socket.io/socket.io.js`. Alternatively you can
         serve the file `socket.io.js` found in the `dist` folder.-->
+        
         <script src="/socket.io/socket.io.js"></script>
+        <!--Initiate a connection (handshake) between the client and the server-->
+        <script>
+        // set a variable for the socket and pass in the server location
+        const socket = io('http://localhost:8080');
+        </script>
     </body>
 
 </html>
